--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,8 @@ img {
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .button-portfolio:hover,
