--- a/css/styles.css
+++ b/css/styles.css
@@ -232,13 +232,13 @@ img {
   line-height: 1.62;
   letter-spacing: 0.03em;
   border: none;
+  box-shadow: 0px 1px 3px #0000001f, 0px 1px 1px #00000024,
+    0px 2px 1px #00000033;
   border-radius: 4px;
   padding-left: 22px;
   padding-right: 22px;
   padding-top: 6px;
   padding-bottom: 6px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .button-portfolio:hover,
