--- a/css/styles.css
+++ b/css/styles.css
@@ -38,11 +38,6 @@ img {
   display: flex;
   margin-left: 93px;
 }
-.conteiner {
-  display: flex;
-  align-items: center;
-  height: 80px;
-}
 .header-navigation {
   display: flex;
   align-items: center;
@@ -70,11 +65,8 @@ img {
 }
 .header-flex-conteiner {
   display: flex;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  height: 80px;
+  
 }
 .header-logo-second {
   font-family: var(--secondary-font);
@@ -149,29 +141,20 @@ img {
   text-transform: uppercase;
   color: #ffffff;
 }
-.conteiner-feactures {
-  margin-left: auto;
-  margin-right: auto;
-  width: 1200px;
+.padding-top{
   padding-top: 94px;
-  padding-bottom: 94px;
-  padding-left: 15px;
-  padding-right: 15px;
 }
+.padding-bottom{
+  padding-bottom:94px ;
+}
+
 .flex-list {
   display: flex;
 }
 .feactures-list-style {
   margin-right: 30px;
 }
-.what-we-do-style-list {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-bottom: 94px;
-}
+
 .what-do-pictures {
   display: flex;
 }
@@ -194,11 +177,6 @@ img {
   color: #ffffff;
 }
 .footer-container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
   padding-top: 60px;
   padding-bottom: 60px;
 }
@@ -291,14 +269,8 @@ img {
 .our-team-img {
   display: flex;
 }
-.our-team {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-bottom: 94px;
-}
+
+
 .our-team-img-list {
   margin-right: 30px;
   border: var(--header-backgraund);
@@ -317,16 +289,10 @@ img {
 }
 /* PORTFOLIO */
 
-.main-section-list {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: auto;
-  margin-left: auto;
-}
 .button-list-menu {
   display: flex;
   justify-content: center;
+  padding-bottom: 16px;
 }
 .bottom-styles {
   margin-right: 8px;
@@ -372,11 +338,18 @@ img {
   border: 1px solid #eeeeee;
   margin-right: 30px;
   width: 370px;
-  margin-bottom: 30px;
+  margin-bottom: 30px; */
 }
-.project-img-style:nth-child(3n) {
+ .project-img-style:nth-child(3n) {
   margin-right: 0px;
 }
 .project-img-style:nth-last-child(-n + 3) {
   margin-bottom: 0px;
+} 
+.conteiner {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
